<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jp.co.nirvana0rigin.timerspeaker3.Config">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:background="@color/black"
        android:id="@+id/base_config">

        <TextView
            style="@style/config_title"
            android:text="@string/config_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:gravity="center_vertical|left">

            <TextView
                style="@style/choice_title"
                android:text="@string/cars" />

            <Button
                style="@style/choice_button"
                android:background="@drawable/choice_car01f"
                android:id="@+id/car1" />

            <Button
                style="@style/choice_button"
                android:background="@drawable/choice_car02f"
                android:id="@+id/car2" />

            <Button
                style="@style/choice_button"
                android:background="@drawable/choice_car03f"
                android:id="@+id/car3" />

            <Button
                style="@style/choice_button"
                android:background="@drawable/choice_car04f"
                android:id="@+id/car4" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:gravity="center_vertical|left">

            <TextView
                style="@style/choice_title"
                android:text="@string/interval" />

            <Button
                style="@style/choice_button"
                android:background="@drawable/choice_false"
                android:text="1秒"
                android:id="@+id/interval1" />

            <Button
                style="@style/choice_button"
                android:background="@drawable/choice_false"
                android:text="10秒"
                android:id="@+id/interval10" />

            <Button
                style="@style/choice_button"
                android:background="@drawable/choice_false"
                android:text="1分"
                android:id="@+id/interval60" />

            <Button
                style="@style/choice_button"
                android:background="@drawable/choice_false"
                android:text="5分"
                android:id="@+id/interval300" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:orientation="vertical"
            android:gravity="center_vertical|left"
            android:paddingLeft="84dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:textColor="@color/darkgrey"
            android:text="@string/sec1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:textColor="@color/darkgrey"
            android:text="@string/sec10" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:textColor="@color/darkgrey"
            android:text="@string/min1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:textColor="@color/darkgrey"
            android:text="@string/min5" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
